# OS-Labs

./: .~lock.LW1.docx#  CMakeLists.txt  LW1.docx  LW2.docx  LW3.docx  LW4.docx  LW567.docx  LW8.docx
CP/: CMakeLists.txt  config.json  main.cpp
CP/include/: Client.h  GameData.h  Server.h  Tools.h  tools.h
CP/src/: GameData.cpp  client.cpp  main.cpp  server.cpp  tools.cpp
LW1/: CMakeLists.txt
LW1/include/: parent.h
LW1/src/: child.c  parent.c  utils.c
LW2/: CMakeLists.txt  file_which_could_save_my_live  file_which_could_save_my_live.cpp  main.c
LW2/include/: utils.h
LW2/src/: utils.c
LW3/: CMakeLists.txt  main.c
LW3/include/: utils.h
LW3/src/: child.c  parent.c
LW4/: CMakeLists.txt  main_dynamic.c  main_static.c
LW4/src/: lib1.c  lib2.c
LW567/: CMakeLists.txt  my_program  nice_code.cpp
LW567/include/: controller.h  tools.h  worker.h
LW567/src/: controller.cpp  tools.cpp  worker.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab567_test.cpp  test4.cpp
